--- a/1. LaTeX/main.tex
+++ b/1. LaTeX/main.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass{book}
 \usepackage{graphicx}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc} % Ensures proper handling of special characters
@@ -26,8 +26,65 @@
 
 \title{Fundamentos Matemáticos \\ del Aprendizaje Automático}
 \author{Nicolas Silva Nash \\ Departamento de Matemática \\ Universidad Nacional del Comahue}
-%\date{\today}
+
 \maketitle
+\chapter*{Introducción}
+Este trabajo explora los fundamentos matemáticos de la Teoría del Aprendizaje Estadístico. Más que una simple colección de algoritmos, 
+esta teoría sirve como un puente entre la Matemática (especialmente la teoría de la medida 
+y el análisis funcional) y el Aprendizaje Automático (Machine Learning), creando en un marco riguroso que explica cómo las máquinas pueden extraer reglas generales a partir 
+de datos empíricos. El campo de la inteligencia artifical, tan en auge en nuestros tiempos, se construye sobre un andamiaje
+de mucha riqueza teórica, pero ha dado sus últimos grandes saltos sobre resultados experimentales y el desarrollo de arquitecturas
+que aprovechan la escala de cómputo -hasta ahora- siempre creciente, más que como fruto de ideas matemáticas novedosas. Esta teoría intenta 
+responder a la profunda pregunta filosófica y de carácter formal (es decir, matemático) sobre qué permite realmente a una máquina generalizar: pasar
+de la simple memorización de ejemplos a la predicción exitosa de fenómenos no vistos. Al fundamentar el proceso de
+aprendizaje en términos de convergencia de probabilidades empíricas a las reales (es decir, a que aquello que se observa en la práctica
+tiende en la repetición a una propiedad fundamental de los procesos aleatorios que generan datos), esta teoría transforma la ``caja negra" del aprendizaje automático 
+en una disciplina estructurada donde el rendimiento puede ser acotado y comprendido a través del rigor matemático.\newline
+
+
+Comenzamos en el Capítulo 1 estableciendo los prerrequisitos necesarios en tanto Teoría de la Medida, Probabilidad y Estadística Matemática, proporcionando
+el lenguaje riguroso necesario para discutir variables aleatorias, convergencia e inferencia estadística. \newline
+
+En el Capítulo 2 recorremos la historia del Machine Learning, emparentado con la Teoría de la Información y parte del campo
+más amplio de la Inteligencia Artificial. Aquí introducimos el problema central del aprendizaje, en donde prestaremos especial atención al de tipo supervisado y a la tarea de clasificación binaria, el
+más sencillo pero no único campo de aplicación de la Teoría, y trazamos un camino intuitivo sobre el problema del aprendizaje,
+enunciando resultados casi siempre sin demostración, intentando justificar el interés en ciertos aspectos que, al ser enunciados más
+formalmente, pueden aparentar hallarse muy alejados de las aplicaciones que aquí nos interesan.
+Discutiremos varias características fundamentales del aprendizaje automático, como el equilibrio crucial entre la complejidad de un modelo 
+y su capacidad para generalizar, a menudo enmarcado como el dilema sesgo-varianza.\newline
+
+
+El núcleo formal de este texto reside en el Capítulo 3, que proporciona un análisis riguroso de la Teoría de Vapnik-Chervonenkis (VC).
+Mediante la demostración del Lema de Simetrización y el examen de las funciones de crecimiento, este trabajo demuestra que la
+consistencia del principio de Minimización del Riesgo Empírico (ERM) depende estrictamente de la capacidad (una medida de complejidad
+o riqueza) del espacio de funciones 
+elegido, cuantificado por la Dimensión VC.\newline
+
+
+Finalmente, en el Capítulo 4, exploramos otros conceptos relevantes del Aprendizaje como la Complejidad de Rademacher y concluímos exponiendo
+un teorema fundamental que ilustra los límites no solo de la teoría, si no del aprendizaje. A este resultado lo rebautizamos como El Teorema de la Chancha
+y los Veinte y es un recordatorio de que ningún algoritmo 
+de aprendizaje es universalmente apto: el aprendizaje exitoso siempre requiere realizar suposiciones específicas sobre la 
+distribución subyacente de los datos. \newline
+
+
+A pesar de la elegancia de la teoría VC, la IA moderna presenta un desafío significativo para estos fundamentos clásicos. 
+El éxito abrumador de las Redes Neuronales y las arquitecturas basadas en Transformers (como BERT y GPT) ocurre a menudo en 
+un régimen que la teoría clásica calificaría como ``sobreparametrizado'', donde el número de parámetros supera con creces el número 
+de ejemplos de entrenamiento. Las cotas clásicas suelen volverse vacuas en estos escenarios, fallando al explicar por qué modelos 
+con capacidad casi infinita no caen simplemente en el sobreajuste. En consecuencia, existe una necesidad urgente (y de a poco mitigada)
+de adaptar y expandir 
+la Teoría del Aprendizaje Estadístico para dar cuenta de los sesgos inductivos únicos de estos nuevos algoritmos, asegurando que la 
+próxima generación de IA permanezca anclada en un destino matemático sólido. La historia de la Inteligencia Artificial se ve signada
+por períodos de crecimiento exponencial en base a desarrollos tecnológicos y de arquitectura, alternados con largos inviernos de estancamiento
+que son sorteados por desarrollos teóricos que habilitan nuevos caminos. Mientras las Scaling Laws (o leyes de escalamiento) se mantengan y los
+modelos multimodales que aún llamamos sencillamente ``LLMs'' sigan mejorando en base al aumento de número de parámetros, datos de entrenamiento
+y capacidad de cómputo, se mantendrá el poco interés general en la búsqueda de razonamientos fundacionales para el aprendizaje. Pero
+si este progreso como lo conocemos se detiene, o al menos desacelera, la necesidad de una teoría fundamental del aprendizaje puede volverse
+el cuello de botella de la inteligencia del mañana. En el escenario más optimista para estas tecnologías, en el que se vuelven eventualmente
+capaces de mejorarse a si mismas de forma autónoma, quiza la propia Matemática sea la llave para su evolución autoforzada.
+\newline
+
 \tableofcontents
 \chapter{Resultados Preliminares}
 \section{Medida}
